[package]
name = "rucene"
version = "0.1.0"
authors = ["Search Team"]

[dependencies]
bytes = "0.4"
chan = "0.1.21"
chan-signal = "0.3.1"
crc = "1.5.0"
either = "1.3"
error-chain = "0.11"
flate2 = "1.0.1"
lazy_static = "1.0"
log = "0.4"
memmap = "0.6"
rand = "0.4"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thread_local = "0.3"
num-traits = "0.2"
byteorder = "1"
num_cpus = "1.0"
clippy = { version = "*", optional = true }

[[bin]]
name = "verify"

[[bin]]
name = "benchmark"

# The release profile, used for `cargo build --release`
[profile.release]
lto = true
opt-level = 3
debug = true
