[package]
name = "rucene"
version = "0.1.0"
authors = ["Search Team"]

[dependencies]
bytes = "0.4"
chan = "0.1.21"
chan-signal = "0.3.1"
crc = "1.5.0"
crossbeam = "0.4"
either = "1.3"
error-chain = "0.11"
fasthash = "0.3"
flate2 = "1.0.2"
lazy_static = "1.0"
log = "0.4"
memmap = "0.6"
rand = "0.5"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thread_local = "0.3"
num-traits = "0.2"
byteorder = "1"
clippy = { version = "*", optional = true }

# The release profile, used for `cargo build --release`
[profile.release]
debug = true
