[package]
name = "rucene"
version = "0.1.1"
authors = ["Zhihu Search Team"]
repository = "https://github.com/zhihu/rucene"
license-file = "LICENSE"
description = """
Rucene is a Rust port of the popular Apache Lucene project. Rucene is 
not a complete application, but rather a code library and API that 
can easily be used to add full text search capabilities to applications.
"""

[dependencies]
bytes = "0.4"
chan = "0.1.21"
chan-signal = "0.3.1"
crc = "1.5.0"
crossbeam = "0.7"
either = "1.3"
error-chain = "0.12.1"
fasthash = "0.3"
flate2 = "1.0.2"
lazy_static = "1.0"
log = "0.4"
memmap = "0.6"
num_cpus = "1.10.0"
rand = "0.5"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
smallvec = "0.6.9"
thread_local = "0.3"
unicode_reader = "0.1.1"
num-traits = "0.2"
byteorder = "1"
crunchy = "0.2.2"

[dev-dependencies]
tempfile = "3.0.8"

# The release profile, used for `cargo build --release`
[profile.release]
debug = true
